# chabeau

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_QUALITY_AUDIT.md  Cargo.toml  README.md  RELEASE.md  WISHLIST.md  build.rs  chabeau-log-2026-01-22.txt  release.toml  test_chabeau.exp  test_scrolling_bug.exp  vhs.tape
.claude/: settings.json
.github/workflows/: ci.yml  nightly.yml  publish.yml
benches/: README.md  render_cache.rs
examples/: config.toml.sample  darwin.json  hypatia.json
plans/: assistant_message_editing.md  attachment-feature.md  code-docs-sprint.md  complex-input-refactor.md  list-vertical-whitespace.md  logging-audit.md  mcp-http-plan.md  span-metadata-code-blocks.md
src/: api.rs  app.rs  auth.rs  builtin_models.toml  builtin_providers.rs  builtin_themes.toml  chat_loop.rs  cli.rs  commands.rs  config.rs  editor.rs  lib.rs  logging.rs  main.rs  model_list.rs  models.rs  provider_list.rs  scroll.rs  set_default_model.rs  ui.rs
src/api/: mod.rs  models.rs
src/auth/: mod.rs  ui.rs
src/builtins/: help.md  mcp-preamble.md  models.toml  oauth-callback.html  presets.toml  themes.toml
src/character/: cache.rs  card.rs  import.rs  loader.rs  mod.rs  png_text.rs  service.rs  test_helpers.rs  tests_integration.rs
src/cli/: character_list.rs  mod.rs  model_list.rs  pick_default_model.rs  pick_default_provider.rs  provider_list.rs  say.rs  set_default_model.rs  tests.rs  theme_list.rs
src/cli/settings/: error.rs  helpers.rs  mod.rs  registry.rs
src/commands/: mcp_prompt_parser.rs  mod.rs  refine.rs  registry.rs  tests.rs
src/commands/handlers/: config.rs  core.rs  io.rs  mcp.rs  mod.rs
src/core/: app.rs  builtin_mcp.rs  builtin_oauth.rs  builtin_presets.rs  builtin_providers.rs  chat_stream.rs  config.rs  constants.rs  keyring.rs  mcp_auth.rs  mcp_runtime.rs  mcp_sampling.rs  message.rs  mod.rs  oauth.rs  persona.rs  persona_integration_tests.rs  preset.rs  providers.rs  shared_selection.rs  text_wrapping.rs
src/core/app/: actions.rs  app.rs  conversation.rs  inspect.rs  mod.rs  pickers.rs  session.rs  settings.rs  streaming.rs  tests.rs  ui_helpers.rs  ui_state.rs
src/core/config/: data.rs  defaults.rs  io.rs  mod.rs  orchestrator.rs  printing.rs  tests.rs
src/mcp/: client.rs  events.rs  manager.rs  mod.rs  permissions.rs  registry.rs
src/mcp/client/: mod.rs  operations.rs  protocol.rs  tests.rs  transport_http.rs  transport_stdio.rs
src/mcp/transport/: http.rs  mod.rs  stdio.rs  streamable_http.rs
src/ui/: appearance.rs  builtin_help.md  builtin_themes.rs  chat_loop.rs  help.rs  layout.rs  links.rs  markdown.rs  markdown_wrap.rs  mod.rs  osc.rs  osc_backend.rs  osc_state.rs  picker.rs  renderer.rs  span.rs  theme.rs  title.rs
src/ui/chat_loop/: event_loop.rs  event_loop_tests.rs  keybindings.rs  lifecycle.rs  mod.rs  modes.rs  setup.rs  stream.rs
src/ui/markdown/: code.rs  lists.rs  metadata.rs  (+5 more)
src/utils/: auth.rs  clipboard.rs  color.rs  editor.rs  input.rs  line_editor.rs  logging.rs  mod.rs  scroll.rs  syntax.rs  test_utils.rs  url.rs
tapes/: README.md  assistant-edit.tape  character.tape  codeblock.tape  mcp-inspector.tape  mcp.sh  mcp.tape  preset-short.tape  refine.tape  retry.tape  syntax.tape  tables.tape  themes.tape  user-edit.tape
tapes/lib/: del-input.tape  preamble.tape  wait-turn.tape
test-cards/: test_invalid.json  test_simple.json
(+39 files in other folders)
