[package]
name = "chabeau"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.29"
ratatui = "0.29"
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3"
tokio-util = "0.7.15"
keyring = { version = "3.0", features = ["sync-secret-service"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
