[package]
name = "chabeau"
version = "0.2.1"
edition = "2021"
description = "A full-screen terminal chat interface that connects to various AI APIs for real-time conversations"
license = "CC0-1.0"
repository = "https://github.com/permacommons/chabeau"
homepage = "https://github.com/permacommons/chabeau"
readme = "README.md"
keywords = ["chat", "ai", "terminal", "openai", "cli"]
categories = ["command-line-utilities", "api-bindings"]
authors = ["Permacommons <info@permacommons.org>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
directories = "6.0"
ratatui = "0.29"
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3"
tokio-util = "0.7.15"
keyring = { version = "3.0", features = ["sync-secret-service"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.20"
