[package]
name = "chabeau"
version = "0.5.2-dev"
edition = "2021"
description = "A full-screen terminal chat interface that connects to various AI APIs for real-time conversations"
license = "CC0-1.0"
repository = "https://github.com/permacommons/chabeau"
homepage = "https://github.com/permacommons/chabeau"
readme = "README.md"
keywords = ["chat", "ai", "terminal", "openai", "cli"]
categories = ["command-line-utilities", "api-bindings"]
authors = ["Permacommons <info@permacommons.org>"]

[features]
default = []
bench = []

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
directories = "6.0"
ratatui = "0.29"
pulldown-cmark = "=0.13.0"
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3"
tokio-util = "0.7.15"
keyring = { version = "3.0", features = ["sync-secret-service", "windows-native", "apple-native"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.20"
tui-textarea = "0.7"
syntect = "5"
async-trait = "0.1"
unicode-width = "0.2.0"
unicode-segmentation = "1.11"
memchr = "2.7"
base64 = "0.22"
crc32fast = "1.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
vergen = { version = "9.0", features = ["build", "cargo", "rustc", "si"] }
vergen-git2 = { version = "1.0", features = ["build", "cargo", "rustc", "si"] }

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "render_cache"
harness = false
required-features = ["bench"]

#[ Enable the optional `bench` feature when running Criterion benches. ]
